# blob-splitter

./: meson.build
shamir/: shamir.c  shamir.h
src/: ascon-test.c  ascon.h  blob-splitter.c  random.c  shamir-test.c  shamir.c  shamir.h  share.c  share.h
util/: ascon.c  ascon.h  base64.h  random.c  random.h
